# papers-feed

./: .gitignore  .gitmodules  README.md  gh-store-snapshot.json  pyproject.toml
.github/workflows/: 2_deploy-frontend.yml  convert-markdown.yml  deploy_frontend.yaml  download-papers.yml  hard-refresh.yml  process-events.yml  update-readme.yml  update-submodule.yml
data/: git-info.json
data/papers/: failed_markdown.json  gh-store-snapshot.json  papers.yaml
data/papers/2312.00752/: metadata.json
data/papers/2312.00752/media/: crossref.lua  metadata.yaml
data/papers/2312.00752/source/: biblio.bib  main.bbl  main.run.xml
scripts/: github_repo_mirror.py  process_enrichments.py  process_task.py  toggle_issues.py
